--- a/assets/css/styles1.css
+++ b/assets/css/styles1.css
@@ -2843,7 +2843,10 @@ select {
     padding-left: 0px; }
 
   #mixpanelImg {
-    margin-bottom: 12px; } }
+    margin-bottom: 12px; }
+
+  #header {
+    background-color: #353738; } }
 @media (min-width: 768px) {
   #community .content {
     height: 380px;
@@ -2851,7 +2854,10 @@ select {
 
   #mixpanelImg {
     position: absolute;
-    left: 0px; } }
+    left: 0px; }
+
+  #header {
+    background-color: #353738; } }
 @media (min-width: 992px) {
   #mixpanelImg {
     position: absolute;
@@ -2859,7 +2865,10 @@ select {
 
   .hwinfopanels .services-item {
     padding-left: 20%;
-    padding-right: 20%; } }
+    padding-right: 20%; }
+
+  .promo {
+    height: 585px; } }
 @media (min-width: 1200px) {
   #mixpanelImg {
     position: absolute;
